--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/contents.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/contents.css
@@ -197,3 +197,8 @@ body[contenteditable="false"] *,
   font-size: 10.5pt;
   line-height: 1.7;
 }
+
+.cke_image_resizer {
+  bottom: 0 !important;
+  right: 0 !important;
+}
