--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/html-editor-styles.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/html-editor-styles.css
@@ -1,3 +1,8 @@
+hr {
+  border-top: 3px dotted #777 !important;
+  margin: 30px auto;
+}
+
 .html-editor-chapter {
   background-color: #c84;
   color: #fff;
