--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/html-editor-styles.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/html-editor-styles.css
@@ -1,6 +1,20 @@
 hr {
-  border-top: 3px dotted #777 !important;
+  position: relative;
   margin: 30px auto;
+}
+
+hr:after {
+  content: " ";
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  background-color: #999;
+  left: 47%;
+  left: calc(50% - 15px);
+  top: -16px;
+  border-radius: 50%;
+  margin: 3px;
+  border: 10px solid #fff;
 }
 
 .html-editor-chapter {
