--- a/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/contents.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/ckeditor/$resource/css/default/contents.css
@@ -1,16 +1,18 @@
 @import url("html-editor-styles.css");
 
 /*
-Copyright (c) 2003-2016, CKSource - Frederico Knabben. All rights reserved.
-For licensing, see LICENSE.md or http://ckeditor.com/license
+Copyright (c) 2003-2018, CKSource - Frederico Knabben. All rights reserved.
+For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 */
 body {
   /* Font */
-  font-family: sans-serif, Arial, Verdana, "Trebuchet MS";
+  /* Emoji fonts are added to visualise them nicely in Internet Explorer. */
+  font-family: sans-serif, Arial, Verdana, "Trebuchet MS", "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
   font-size: 12px;
   /* Text color */
   color: #333;
-  /* Remove the background color to make it transparent */
+  /* Remove the background color to make it transparent. */
   background-color: #fff;
   margin: 20px;
 }
@@ -22,7 +24,8 @@ body {
   word-wrap: break-word;
 }
 
-/* ckan77
+/* ckan77 */
+/**
 blockquote {
   font-style: italic;
   font-family: Georgia, Times, "Times New Roman", serif;
@@ -44,7 +47,6 @@ blockquote {
   border-right-width: 5px;
 }
 */
-
 a {
   color: #0782C1;
 }
@@ -52,7 +54,7 @@ a {
 ol, ul, dl {
   /* IE7: reset rtl list margin. (#7334) */
   *margin-right: 0px;
-  /* preserved spaces for list items with text direction other than the list. (#6249,#8049)*/
+  /* Preserved spaces for list items with text direction different than the list. (#6249,#8049)*/
   padding: 0 40px;
 }
 
@@ -97,8 +99,7 @@ span[lang] {
 
 figure {
   text-align: center;
-  border: solid 1px #ccc;
-  border-radius: 2px;
+  outline: solid 1px #ccc;
   background: rgba(0, 0, 0, 0.05);
   padding: 10px;
   margin: 10px 20px;
@@ -203,4 +204,14 @@ body[contenteditable="false"] *,
 .cke_image_resizer {
   bottom: 0 !important;
   right: 0 !important;
+}
+
+*::-webkit-scrollbar {
+  width: 5px;
+  background-color: #f8f8f8;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #aab;
+  border-radius: 5px;
 }
