--- a/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
+++ b/src/main/java/net/simpleframework/mvc/component/ext/comments/$resource/css/default/comment.css
@@ -165,9 +165,9 @@
 }
 
 .Comp_Comment .t1_comments .oitem .mc {
-  font-size: 10pt;
+  font-size: 10.5pt;
   line-height: 1.6;
-  padding-bottom: 10px;
+  padding-bottom: 8px;
   padding-right: 10px;
   text-align: justify;
 }
@@ -224,25 +224,31 @@
   top: -30px;
 }
 
-.Comp_Comment .t1_comments .oitem .desc a {
-  color: #49d;
-}
-
-.Comp_Comment .t1_comments .oitem .desc a:HOVER {
-  color: #fff;
+.Comp_Comment .t1_comments .oitem .desc .like {
+  position: absolute;
+  right: 0px;
+  top: 4px;
 }
 
 .Comp_Comment .t1_comments .oitem .desc img {
-  width: 16px;
-  height: 16px;
   vertical-align: middle;
   cursor: pointer;
+}
+
+.Comp_Comment .t1_comments .oitem .desc img.act {
+  width: 28px;
+  height: 28px;
+}
+
+.Comp_Comment .t1_comments .oitem .desc .like img {
+  width: 16px;
+  height: 16px;
   margin-left: 3px;
 }
 
 .Comp_Comment .t1_comments .oitem .desc span {
   font-size: 8.5pt;
-  vertical-align: middle;
+  vertical-align: bottom;
 }
 
 .Comp_Comment .pager_no_result {
